--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="proDP"
-            type="com.cr4zyrocket.sapoctl.product_detail.ProductDetailPresenter" />
+            type="com.cr4zyrocket.sapoctl.presenter.product_detail.ProductDetailPresenter" />
     </data>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -13,7 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        tools:context=".product_detail.ProductDetailActivity">
+        android:background="@color/gray_background"
+        tools:context=".presenter.product_detail.ProductDetailActivity">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/tbProductDetailToolbar"
