--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -460,7 +460,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="10dp"
-                            android:layout_marginEnd="10dp" />
+                            android:layout_marginEnd="10dp"
+                            android:nestedScrollingEnabled="false"/>
 
                         <View
                             android:layout_width="match_parent"
@@ -670,7 +671,8 @@
                         <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/rclvProductDetailProductVariantList"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content" />
+                            android:layout_height="wrap_content"
+                            android:nestedScrollingEnabled="false"/>
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
