--- a/app/src/main/res/layout/activity_variant_detail.xml
+++ b/app/src/main/res/layout/activity_variant_detail.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
+
     <data>
+
         <variable
             name="varDP"
             type="com.cr4zyrocket.sapoctl.presenter.variant_detail.VariantDetailPresenter" />
     </data>
+
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -453,7 +456,7 @@
                                     android:layout_marginTop="10dp"
                                     android:layout_marginEnd="10dp"
                                     android:layout_weight="1.5"
-                                    android:text="@{varDP.txtInventoryPosition}"/>
+                                    android:text="@{varDP.txtInventoryPosition}" />
 
                                 <TextView
                                     android:id="@+id/tvVariantDetailVariantAvailable"
@@ -469,7 +472,7 @@
 
                         <TextView
                             android:id="@+id/tvVariantDetailShowVariantTypeDetail"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="10dp"
                             android:layout_marginTop="10dp"
@@ -490,7 +493,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="10dp"
-                            android:layout_marginEnd="10dp" />
+                            android:layout_marginEnd="10dp"
+                            android:nestedScrollingEnabled="false"/>
 
                         <View
                             android:layout_width="match_parent"
@@ -598,7 +602,8 @@
                         <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/rclvVariantDetailPackSizeList"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content" />
+                            android:layout_height="wrap_content"
+                            android:nestedScrollingEnabled="false"/>
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
