--- a/app/src/main/res/layout/activity_variant_detail.xml
+++ b/app/src/main/res/layout/activity_variant_detail.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout >
 
     <data>
 
@@ -76,7 +76,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
-                    android:layout_marginTop="10dp"
                     android:layout_marginEnd="10dp"
                     app:cardCornerRadius="7dp">
 
@@ -387,13 +386,15 @@
                                 </LinearLayout>
 
                                 <TextView
+                                    android:clickable="true"
                                     android:id="@+id/tvVariantDetailShowCompositeDetail"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
                                     android:gravity="end"
                                     android:text="@string/compositeDetail1"
-                                    android:textColor="@color/clickable" />
+                                    android:textColor="@color/clickable"
+                                    android:focusable="true" />
                             </LinearLayout>
                         </LinearLayout>
                     </LinearLayout>
@@ -477,6 +478,7 @@
                             android:layout_marginStart="10dp"
                             android:layout_marginTop="10dp"
                             android:focusable="true"
+                            android:clickable="true"
                             android:text="@{varDP.txtShowProductTypeDetail}"
                             android:textColor="@color/clickable" />
 
