--- a/app/src/main/res/layout/activity_variant_detail.xml
+++ b/app/src/main/res/layout/activity_variant_detail.xml
@@ -44,9 +44,7 @@
                     <androidx.cardview.widget.CardView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginEnd="10dp"
+                        android:layout_margin="10dp"
                         app:cardCornerRadius="7dp">
 
                         <ImageView
