--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -357,6 +357,7 @@
                                     android:clickable="true"
                                     android:focusable="true"
                                     android:gravity="end"
+                                    android:onClick="@{()->proDP.showCompositeSubItemList()}"
                                     android:text="@string/compositeDetail1"
                                     android:textColor="@color/clickable" />
                             </LinearLayout>
