--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -21,8 +21,16 @@
             android:id="@+id/tbProductToolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:menu="@menu/menu_appbar_product"
-            app:title="@{proP.txtProductTitle}" />
+            app:menu="@menu/menu_appbar_product">
+
+            <TextView
+                style="@style/textBoldBlackStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@{proP.txtProductTitle}"
+                android:textSize="20sp" />
+        </androidx.appcompat.widget.Toolbar>
 
         <androidx.appcompat.widget.SearchView
             android:id="@+id/svProductSearch"
