--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -206,7 +206,7 @@
                                     android:layout_marginStart="10dp"
                                     android:layout_marginTop="10dp"
                                     android:layout_marginEnd="10dp"
-                                    android:text="@{String.valueOf(proDP.variant.variantWeightValue)}" />
+                                    android:text="@{proDP.txtProductWeight}" />
                             </TableRow>
 
                             <TableRow>
