--- a/app/src/main/res/layout/activity_variant_detail.xml
+++ b/app/src/main/res/layout/activity_variant_detail.xml
@@ -213,7 +213,7 @@
                                     android:layout_marginStart="10dp"
                                     android:layout_marginTop="10dp"
                                     android:layout_marginEnd="10dp"
-                                    android:text="@{String.valueOf(varDP.variant.variantWeightValue)}" />
+                                    android:text="@{varDP.txtVariantWeight}" />
                             </TableRow>
 
                             <TableRow>
