--- a/app/src/main/res/layout/activity_variant_detail.xml
+++ b/app/src/main/res/layout/activity_variant_detail.xml
@@ -240,7 +240,7 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:layout_margin="10dp"
-                                    android:text="@{varDP.variant.variantWeightUnit}" />
+                                    android:text="@{varDP.variant.variantUnit}" />
                             </TableRow>
 
                             <TableRow android:id="@+id/trVariantDetailCompositeCategoryName">
