--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="clickable">#3656FF</color>
     <color name="gray_background">#EDEDED</color>
+    <color name="black_transparent_background">#90000000</color>
 </resources>
