--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -233,7 +233,7 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:layout_margin="10dp"
-                                    android:text="@{proDP.variant.variantWeightUnit}" />
+                                    android:text="@{proDP.variant.variantUnit}" />
                             </TableRow>
 
                             <TableRow android:id="@+id/trProductDetailCompositeCategoryName">
