--- a/app/src/main/res/layout/activity_composite_item.xml
+++ b/app/src/main/res/layout/activity_composite_item.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
         <variable
             name="comItemP"
-            type="com.cr4zyrocket.sapoctl.presenter.composite_item.CompositeItemPresenter" />
+            type="com.cr4zyrocket.sapoctl.presenter.compositeitem.CompositeItemPresenter" />
     </data>
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/gray_background"
-        tools:context=".presenter.composite_item.CompositeItemActivity">
+        tools:context=".presenter.compositeitem.CompositeItemActivity">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/tbCompositeItemToolbar"
@@ -38,7 +38,8 @@
             android:layout_above="@id/crdCompositeItemInfo"
             android:layout_below="@+id/tbCompositeItemToolbar"
             android:layout_marginTop="2dp"
-            android:background="@color/white" />
+            android:background="@color/white"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/crdCompositeItemInfo"
