--- a/app/src/main/res/layout/item_composite_sub_item.xml
+++ b/app/src/main/res/layout/item_composite_sub_item.xml
@@ -3,14 +3,16 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
-    android:padding="10dp"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:padding="10dp">
+
     <ImageView
         android:id="@+id/ivCompositeSubItemImage"
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_no_image" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -56,11 +58,12 @@
                 android:layout_height="wrap_content"
                 android:gravity="end"
                 android:text="@string/app_name" />
+
             <TextView
-                android:layout_gravity="end"
                 android:id="@+id/tvCompositeSubItemQuantity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="end"
                 android:text="@string/app_name" />
 
         </LinearLayout>
