--- a/app/src/main/res/layout/activity_composite_item.xml
+++ b/app/src/main/res/layout/activity_composite_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
 
@@ -8,70 +9,80 @@
             type="com.cr4zyrocket.sapoctl.presenter.compositeitem.CompositeItemPresenter" />
     </data>
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/rlCompositeItem"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/gray_background"
-        tools:context=".presenter.compositeitem.CompositeItemActivity">
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/tbCompositeItemToolbar"
+        android:layout_height="match_parent">
+        <RelativeLayout
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/rlCompositeItem"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white">
+            android:layout_height="match_parent"
+            android:background="@color/gray_background"
+            tools:context=".presenter.compositeitem.CompositeItemActivity">
 
-            <TextView
-                style="@style/textBoldBlackStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@string/compositeItemActivityTitle"
-                android:textSize="20sp" />
-        </androidx.appcompat.widget.Toolbar>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rclvCompositeItemList"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_above="@id/crdCompositeItemInfo"
-            android:layout_below="@+id/tbCompositeItemToolbar"
-            android:layout_marginTop="2dp"
-            android:background="@color/white"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/crdCompositeItemInfo"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_alignParentBottom="true"
-            android:layout_marginTop="2dp">
-
-            <LinearLayout
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/tbCompositeItemToolbar"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:padding="10dp">
-
-                <TextView
-                    style="@style/textBlackStyle"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@{comItemP.txtCompositeSubItemsCount}"
-                    android:textSize="15sp" />
+                android:layout_height="wrap_content"
+                android:background="@color/white">
 
                 <TextView
                     style="@style/textBoldBlackStyle"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="end"
-                    android:text="@{comItemP.txtCompositeSubItemsPrice}"
+                    android:layout_gravity="center"
+                    android:text="@string/compositeItemActivityTitle"
                     android:textSize="20sp" />
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
+            </androidx.appcompat.widget.Toolbar>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rclvCompositeItemList"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_above="@id/crdCompositeItemInfo"
+                android:layout_below="@+id/tbCompositeItemToolbar"
+                android:layout_marginTop="2dp"
+                android:background="@color/white"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/crdCompositeItemInfo"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_alignParentBottom="true"
+                android:layout_marginTop="2dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:padding="10dp">
+
+                    <TextView
+                        style="@style/textBlackStyle"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@{comItemP.txtCompositeSubItemsCount}"
+                        android:textSize="15sp" />
+
+                    <TextView
+                        style="@style/textBoldBlackStyle"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="end"
+                        android:text="@{comItemP.txtCompositeSubItemsPrice}"
+                        android:textSize="20sp" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+        </RelativeLayout>
+        <ProgressBar
+            android:id="@+id/pbCompositeItem"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="invisible" />
     </RelativeLayout>
 </layout>
